force-app/main/default/objects/Timecard__c/Timecard__c.object-meta.xml
<CustomObject>
    <description>Represents the Header object for a time card submission. Has a list of child Time card items which allow for tracking of hours spent by Volunteers on their active assignments.</description>
    <label>Time Entry</label>
    <nameField>
        <displayFormat>TE-{00000000}</displayFormat>
        <label>Time Entry</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Entries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>