force-app/main/default/objects/Timecard__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Volunteer associated to timecard.</description>
    <inlineHelpText>Volunteer associated to this timecard.</inlineHelpText>
    <label>Volunteer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.Name</field>
            <operation>equals</operation>
            <value>AARP Volunteer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Timecards</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>