force-app/main/default/objects/Timecard__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <description>Total time entered for all assignments.</description>
    <inlineHelpText>Total time entered for all assignments.</inlineHelpText>
    <label>Total</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>