force-app/main/default/objects/Timecard__c/fields/Week_Beginning_Date__c.field-meta.xml
<CustomField>
    <fullName>Week_Beginning_Date__c</fullName>
    <description>Week of time entry indicated by week&#39;s starting date.</description>
    <inlineHelpText>Week of time entry indicated by week&#39;s starting date.</inlineHelpText>
    <label>Week Beginning Date</label>
    <type>Date</type>
</CustomField>