force-app/main/default/objects/Timecard__c/listViews/Time_Entry_with_Volunteer.listView-meta.xml
<ListView>
    <fullName>Time_Entry_with_Volunteer</fullName>
    <columns>Week_Beginning_Date__c</columns>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>Time Entry with Volunteer</label>
</ListView>